# spot

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  THANKS  configure.ac  product_remangler  spot.spec.in  tae_remangler
bench/: Makefile.am
bench/beem/: Makefile.am  algorithms  formulae.txt  run
bench/bitstate/: .gitignore  Makefile.am  README  bitstate.cc  bitstate.hh  bootstrap.sh  deadlock.hh  main.cc  run.sh
bench/dynchk/: .gitignore  Makefile.am  README  algorithms  defs  defs.in  dve_suite.sh  dynchk.cc  gen.cc  generator.sh  mergedecomp.sh  pml2tgba.pl  randscc_analysis.sh  test_suite.sh
bench/dynchk/models/: bopdp.1.dve  bopdp.1.dve.dve_suite  bopdp.3.dve  bopdp.3.dve.dve_suite  cl3serv1.pml  cl3serv1.test_suite  cl3serv3.pml  cl3serv3.test_suite  eeaean1.test_suite  eeaean2.test_suite  elevator.1.dve  elevator.1.dve.dve_suite  elevator.3.dve  elevator2.1.dve  elevator2.1.dve.dve_suite  elevator2.3.dve  gear.1.dve  gear.1.dve.dve_suite  gear.2.dve  lifts.1.dve  lifts.1.dve.dve_suite  lifts.3.dve  lifts.3.dve.dve_suite  production_cell.1.dve  production_cell.1.dve.dve_suite  production_cell.3.dve  sorter.1.dve  sorter.3.dve  sorter.3.dve.dve_suite  train-gate.1.dve  train-gate.1.dve.dve_suite  train-gate.3.dve
bench/emptchk/: Makefile.am  algorithms  all-formulae.ltl  defs.in  ltl-human.sh  ltl-random.sh  pml-clserv.sh  pml-eeaean.sh  pml2tgba.pl  strategies  tl-commut.sh
bench/ltl2tgba/: defs.in
bench/mcfeatures/: Makefile.am  correlations.py  data-analysis.py  data_analysis.py  extract-features.py  extract.py  gui.py  plot.py
bench/parity_prod/: Makefile.am  README  init_python.in  plot_result.in  run.in  run.py
bench/prcheck/: Makefile.am  README  dba_builder.cc  dba_process.py  prcheck_bench.sh  prcheck_formula.cc  prcheck_process.py
bench/product_n/: Makefile.am  README  init_python.in  plot.in  plot.ipynb.in  product_bench.py  run.in
bench/spin-decomp/: Makefile.am  README  construct_bench.sh  spin_bench.sh
bricks/: brick-assert  brick-assert.h  brick-bitlevel  brick-bitlevel.h  brick-hash  brick-hash.h  brick-hashset  brick-hashset.h  brick-shmem  brick-shmem.h  brick-types  brick-types.h
buddy/: ChangeLog  configure.ac
buddy/src/: bddop.c  bddx.h  kernel.c
debian/: control  copyright  libspot-dev.install  rules
doc/: Makefile.am  spot.bib
doc/org/: .dir-locals.el.in  .gitignore  autcross.org  autfilt.org  citing.org  compile.org  concepts.org  csv.org  dstar2tgba.org  genaut.org  genltl.org  hierarchy.org  hoa.org  index.org  init.el.in  install.org  ioltl.org  ltl2tgba.org  ltl2tgta.org  ltlcross.org  ltldo.org  ltlfilt.org  ltlgrind.org  ltlsynt.org  oaut.org  randaut.org  randltl.org  satmin.org  setup.org  spot.css  tools.org  tut.org  tut01.org  tut02.org  tut03.org  tut04.org  tut10.org  tut11.org  tut12.org  tut20.org  (+9 more)
doc/tl/: tl.bib  tl.tex
iface/: Makefile.am
iface/dve2/: .gitignore  Makefile.am  dve2.cc  dve2.hh  dve2callback.cc  dve2callback.hh  dve2check.cc  dve2checkpor.cc  dve2checkpor.hh  dve2kripke.cc  dve2kripke.hh  dve2state.cc  dve2state.hh  dve2succiter.cc  dve2succiter.hh  dve2twophase.cc  dve2twophase.hh  leader-election-tp.ref  leader-election.form  twophase.test
iface/dve2fasttgba/: Makefile.am  dve2.cc  dve2.hh  dve2check.cc  filter.sh  get_ap.pl  simple.dve  simple.test
iface/ltsmin/: Makefile.am  dfs_inspector.hh  dfs_stats.hh  ltsmin.cc  ltsmin.hh  modelcheck.cc  porinfos.cc  porinfos.hh  proviso.cc  proviso.hh  spins.hh
iface/tlcheck/: .gitignore  Makefile.am  README  allbenchs.txt  tlcheck  tlcheck.cc
lib/: Makefile.am  argp.h
m4/: acx_cache_line.m4  bricks.m4  debug.m4  gccwarn.m4  gnulib-cache.m4  gnulib-comp.m4  l_atomic.m4  lbtt.m4
mybench/: bench.py  bench_exp_empty.py  plot.py  remangle_and_backup.sh  restore.sh
python/: Makefile.am
python/ajax/: Makefile.am  trans.html
python/spot/: __init__.py  aux.py  impl.i  jupyter.py
spot/: Makefile.am
spot/algebra/: Makefile.am  autalgebra.cc  autalgebra.hh  indexmap.hh  languagewilke.hh  matrix.hh  semigroup.cc  semigroup.hh  wilke.hh  wilkecanon.hh
spot/bricks/: brick-assert  (+9 more)
spot/zgastwa/: Makefile.am  zgastwa.cc  zgastwa.hh
src/: Makefile.am
src/fasttgbaalgos/: Makefile.am  dotty_dfs.cc  dotty_dfs.hh  generic_dfs.cc  generic_dfs.hh  lbtt_dfs.cc  lbtt_dfs.hh  stats_dfs.cc  stats_dfs.hh  tgba2fasttgba.cc  tgba2fasttgba.hh
src/fasttgbaalgos/ec/: Makefile.am  cou99.cc  cou99.hh  cou99_scc.cc  cou99_scc.hh  cou99_uf.cc  cou99_uf.hh  cou99_uf_shared.cc  cou99_uf_shared.hh  cou99_uf_swarm.cc  cou99_uf_swarm.hh  cou99check.cc  cou99check.hh  cou99strength.cc  cou99strength.hh  cou99strength_uf.cc  cou99strength_uf.hh  deadstore.hh  dijkstra_scc.cc  dijkstra_scc.hh  dijkstracheck.cc  dijkstracheck.hh  ec.hh  gv04.cc  gv04.hh  ingoing.cc  ingoing.hh  lazycheck.cc  lazycheck.hh  lowlink_stack.hh  root_stack.hh  stackscheck.cc  stackscheck.hh  stats.cc  stats.hh  tarjan_scc.cc  tarjan_scc.hh  union_find.cc  union_find.hh  union_find_shared.cc  (+5 more)
src/fasttgbaalgos/ec/concur/: Makefile.am  MurmurHash3.c  MurmurHash3.h  balloc.c  bitset.c  chunk_support.c  chunk_table_factory.c  context.h  dynamic-array.c  fast_hash.c  fast_hash.h  fast_set.c  fast_set.h  feedback.h  git_version.h  hashtable.c  hashtable.h  hre_context.c  hre_dir_ops.c  hre_feedback.c  hre_main.c  hre_malloc.c  hre_messaging.c  hre_popt.c  hre_pthread.c  hre_queue.c  hre_reduce.c  hre_runtime.c  hre_table.c  hre_timer.c  hre_utils.c  internal.h  lf_queue.c  lf_queue.h  open_set.c  open_set.h  openset.hh  provider.h  queue.h  queue.hh  (+16 more)
src/fasttgbaalgos/ec/concurec/: Makefile.am  concur_ec_stat.hh  dead_share.cc  dead_share.hh
src/fasttgbaalgos/ec/opt/: Makefile.am  opt_dijkstra_scc.cc  opt_dijkstra_scc.hh  opt_ndfs.cc  opt_ndfs.hh  opt_tarjan_scc.cc  opt_tarjan_scc.hh
src/fasttgbatest/: .gitignore  Makefile.am  checker.cc  defs.in  emptchk.test  formula_product  formula_product.cc  tgba2fasttgba.cc  tgba_converter.cc
tests/: Makefile.am  Untitled.ipynb  run.in  simulation.ipynb
tools/: tests2junit
(+719 files in other folders)
